<?xml version="1.0"?>
<package>
  <name>ubiquity_sonar</name>
  <version>0.2.0</version>
  <description>ROS package for the Ubiquity Sonar array</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/UbiquityRobotics/ubiquity_sonar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
