<?xml version="1.0"?>
<package>
  <name>pi_sonar</name>
  <version>0.5.0</version>
  <description>ROS package for running sonars off the Raspberry Pi</description>

  <maintainer email="ra@ubiquityrobotics.com">Rohan Agrawal</maintainer>
  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <license>BSD</license>

  <url type="website">http://github.com/UbiquityRobotics/pi_sonar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>

  <export>
  </export>
</package>
